# mcp-server-atlassian-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  deny.toml
.claude/: settings.local.json
.github/workflows/: release.yml  rust.yml
src/: constants.rs  error.rs  lib.rs  logger.rs  main.rs  pagination.rs  shell.rs  workspace.rs
src/auth/: keychain.rs  mod.rs
src/cli/: api.rs  bb.rs  conf.rs  creds.rs  jira.rs  mod.rs
src/config/: global.rs  mod.rs
src/controllers/: api.rs  circleci.rs  clone.rs  edx.rs  grafana.rs  mod.rs  newrelic.rs  postman.rs  slack.rs  wrds.rs  zoom.rs
src/format/: jmespath.rs  markdown.rs  mod.rs  truncation.rs
src/server/: http.rs  mod.rs  session.rs  shutdown.rs  stdio.rs
src/tools/: args.rs  mod.rs
src/tools/descriptions/: bb_clone.md  bb_delete.md  bb_get.md  bb_patch.md  bb_post.md  bb_put.md  circleci_delete.md  circleci_get.md  circleci_patch.md  circleci_post.md  circleci_put.md  conf_delete.md  conf_get.md  conf_patch.md  conf_post.md  conf_put.md  edx_discussion_comment_create.md  edx_discussion_comments.md  edx_discussion_course.md  edx_discussion_thread_create.md  edx_discussion_threads.md  edx_discussion_topics.md  grafana_list_datasources.md  grafana_query_logs.md  jira_delete.md  jira_get.md  jira_patch.md  jira_post.md  jira_put.md  newrelic_query.md  postman_delete.md  postman_get.md  postman_patch.md  postman_post.md  postman_put.md  slack_delete.md  slack_get.md  slack_patch.md  slack_post.md  slack_put.md  (+9 more)
src/transport/: bitbucket_error.rs  mod.rs  raw_response.rs
tests/: auth_tests.rs  binary_tests.rs  bitbucket_error_tests.rs  circleci_controller_tests.rs  circleci_vendor_tests.rs  cli_tests.rs  clone_tests.rs  config_tests.rs  confluence_controller_tests.rs  confluence_vendor_tests.rs  controller_tests.rs  creds_handler_tests.rs  edx_controller_tests.rs  edx_vendor_tests.rs  error_tests.rs  format_output_tests.rs  grafana_controller_tests.rs  grafana_vendor_tests.rs  http_transport_tests.rs  jira_controller_tests.rs  jira_vendor_tests.rs  jmespath_tests.rs  markdown_tests.rs  newrelic_controller_tests.rs  newrelic_vendor_tests.rs  pagination_tests.rs  postman_controller_tests.rs  postman_vendor_tests.rs  raw_response_tests.rs  shell_tests.rs  slack_controller_tests.rs  slack_vendor_tests.rs  tool_schema_tests.rs  transport_tests.rs  truncation_tests.rs  workspace_tests.rs  wrds_vendor_tests.rs  zoom_controller_tests.rs  zoom_vendor_tests.rs
